external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_lit.exp
warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/missing_match_lit.move:1:9
  │
1 │ #[allow(ide_path_autocomplete)]
  │         ^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_path_autocomplete'

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/ide_mode/missing_match_lit.move:2:3
  │
1 │ #[allow(ide_path_autocomplete)]
  │   ----- Attribute previously given here
2 │ #[allow(ide_dot_autocomplete)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'allow' attached to the same item

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_lit.move:5:16
  │
5 │         match (0) {
  │                ^ Pattern '_0' not covered
  │
  = When '_0' is not 1

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/missing_match_lit.move:11:16
   │
11 │         match (0) {
   │                ^ Pattern '_' not covered

